--- a/무제 2.md
+++ b/무제 2.md
@@ -5,7 +5,7 @@ Tiptap
 
 
 
+![screenshot1](./picture/screenshot.png) 
 
 
-![screenshot1](./picture/screenshot1.png) ![screenshot1](./picture/screenshot2.png) ![screenshot1](./picture/screenshot3.png)
 
