--- a/무제 2.md
+++ b/무제 2.md
@@ -3,9 +3,29 @@ Tiptap
 
 <img align="left" width="100" height="100" src="./picture/appIcon.png"/> **나의 발자취를 담는 일기장**
 
+<br/>
 
+![screenshot](./picture/5.png)
 
-![screenshot1](./picture/screenshot.png) 
+<br/>
 
+## Languages
 
+* Swift
+* Objective-C
 
+<br/>
+
+## Architecture
+
+- VIPER
+- MVC
+
+<br/>
+
+## Libraries
+
+- [Alamofire](https://github.com/Alamofire/Alamofire) 
+- [SwiftyJSON](https://github.com/SwiftyJSON/SwiftyJSON) 
+- [Kingfisher](https://github.com/onevcat/Kingfisher) 
+- [SnapKit](https://github.com/SnapKit/SnapKit) 
